--- a/README
+++ b/README
@@ -7,3 +7,8 @@ It was originally developed using the tutorial:
 http://developer.android.com/training/basics/firstapp/index.html
 
 As of 8/14/13 it has been run only on MacOS using Eclipse.
+
+To start in Eclipse:
+*File->Import->Android->Existing code into Workspace
+*Set new project name to 'RedLion'
+*You'll probably need to set up a new Android Emulator, which is described in the tutorial.
